Hopefully the new ingredient works